<resources>
    <string name="app_name">Smart Finance</string>
    <string name="title_activity_login">Iniciar sesión</string>
    <string name="title_activity_register">Registrarse</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Iniciar sesión</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">Este email es incorrecto</string>
    <string name="error_invalid_password">La contraseña es muy corta</string>
    <string name="error_incorrect_password">La contraseña es incorrecta</string>
    <string name="error_field_required">El campo es requerido</string>
    <string name="permission_rationale">"Se requieren permisos de contactos para completar el email."
    </string>
    <string name="register_button">Regístrate</string>
    <string name="login_button">Iniciar sesión</string>
    <string name="action_settings">Logout</string>
    <string name="start">COMIENZA</string>
    <string name="start_title">Bienvenido a Smart Finance!</string>
    <string name="start_slogan">La manera más fácil de ayudar al microempresario</string>
    <string name="prompt_name">Nombre</string>
    <string name="prompt_lastname">Apellido</string>
    <string name="action_register">Registrarse</string>
    <string name="condition_checkbox">Acepto las condiciones de servicio y la política de privacidad.</string>
    <string name="title_activity_main">Smart Finance</string>
    <string name="action_sign_up">No tienes una cuenta? Regístrate</string>
    <string name="title_expenses">Gastos</string>
    <string name="title_incomes">Ingresos</string>
    <string name="title_summary">Resumen</string>
    <string name="title_activity_business">Selecciona tu negocio</string>
    <string name="title_activity_add_expenses">Agregar gasto</string>
    <string name="title_activity_add_incomes">Agregar ingreso</string>

    <string name="name_business_1">Albañilería y Construcción</string>
    <string name="name_business_2">Restaurante</string>
    <string name="name_business_3">Cerrajería</string>
    <string name="name_business_4">Electricidad</string>
    <string name="name_business_5">Pintura</string>
    <string name="name_business_6">Gasfitería</string>


    <string name="add">Agregar</string>
    <string name="default_text_expenses">Aquí no hay gastos. Favor de registrarlos para que tengas un mejor control financiero de tu negocio</string>
    <string name="default_text_incomes">Aquí no hay ingresos. Favor de registrarlos para que tengas un mejor control financiero de tu negocio</string>

    <string-array name="months">
        <item>enero</item>
        <item>febrero</item>
        <item>Marzo</item>
        <item>abril</item>
        <item>mayo</item>
        <item>junio</item>
        <item>julio</item>
        <item>agosto</item>
        <item>setiembre</item>
        <item>octubre</item>
        <item>noviembre</item>
        <item>diciembre</item>
    </string-array>
    <string-array name="business">
        <item>Albañileria y Construcción</item>
        <item>Restaurante</item>
        <item>Cerrajería</item>
        <item>Electricidad</item>
        <item>Pintura</item>
        <item>Gasfitería</item>
    </string-array>

    <string name="title_fragment_summary">Resumen financiero</string>
    <string name="total_incomes">Total Ingresos</string>
    <string name="total_expenses">Total Gastos</string>
    <string name="utility">Utilidad</string>
    <string name="login_error">Usuario y/o contraseña incorrectos</string>

</resources>
