<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".viewcontrollers.fragments.summary.SummaryFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_fragment_summary"
            android:textSize="18dp"
            android:textColor="@color/cardview_dark_background"/>

        <Spinner
            android:id="@+id/monthSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:spinnerMode="dropdown"
            android:layout_marginTop="20dp"
            android:entries="@array/months"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            android:padding="8dp"
            android:background="@color/cardview_shadow_start_color">

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:columnCount="2"
                android:rowCount="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/total_incomes"
                    android:textSize="16dp"
                    android:gravity="start"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/totalIncomesTextView"
                    android:textSize="16dp"
                    android:gravity="right"
                    android:layout_gravity="right"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimaryDark"/>
            </GridLayout>

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:columnCount="2"
                android:rowCount="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/total_expenses"
                    android:textSize="16dp"
                    android:gravity="start"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/totalExpensesTextView"
                    android:textSize="16dp"
                    android:gravity="right"
                    android:layout_gravity="right"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimaryDark"/>
            </GridLayout>

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:columnCount="2"
                android:rowCount="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/utility"
                    android:textSize="16dp"
                    android:gravity="start"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/utilityTextView"
                    android:textSize="16dp"
                    android:gravity="right"
                    android:layout_gravity="right"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimaryDark"/>
            </GridLayout>

        </LinearLayout>


        <com.github.mikephil.charting.charts.BarChart
            android:id="@+id/barChart"
            android:layout_width="270dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"/>

    </LinearLayout>
</FrameLayout>